--- a/artes-disponiveis.html
+++ b/artes-disponiveis.html
@@ -26,6 +26,7 @@
             <img src="img/futebol/fut-4.jpg" alt="">
             <img src="img/futebol/fut-5.jpg" alt="">
             <img src="img/futebol/fut-6.jpg" alt="">
+            <img src="img/futebol/fut-7.jpg" alt="">
         </article>
     </main>
 
