--- a/artes-disponiveis.html
+++ b/artes-disponiveis.html
@@ -27,6 +27,8 @@
             <img src="img/futebol/fut-5.jpg" alt="">
             <img src="img/futebol/fut-6.jpg" alt="">
             <img src="img/futebol/fut-7.jpg" alt="">
+            <img src="img/futebol/fut-8.jpg" alt="">
+            <img src="img/futebol/fut-9.jpg" alt="">
         </article>
     </main>
 
