coloquei mais imagens em religião e são joão

--- a/artes-futebol.html
+++ b/artes-futebol.html
@@ -15,7 +15,7 @@
     </header>
 
     <nav>
-        <a href="index.html">Voltar</a>
+        <a href="temas-de-artes.html">Voltar</a>
     </nav>
 
     <main>
@@ -33,7 +33,7 @@
     </main>
 
     <nav>
-        <a href="index.html">Voltar</a>
+        <a href="temas-de-artes.html">Voltar</a>
     </nav>
 </body>
 </html>
