--- a/temas-de-artes.html
+++ b/temas-de-artes.html
@@ -20,9 +20,9 @@
 
     <main>
         <nav class="tipos-artes">
-            <a href="artes-disponiveis.html">Futebol</a>
-            <a href="#">Religião</a>
-            <a href="#">São João</a>
+            <a href="artes-futebol.html">Futebol</a>
+            <a href="artes-religiao.html">Religião</a>
+            <a href="saojoao.html">São João</a>
             <a href="#">Ciclismo</a>
             <a href="#">Pescaria</a>
             <a href="#">Carnaval</a>
